# buildkit_cache_benchmark

./: .gitignore  README.MD  baseline.sh  cached.sh  functions.sh
sample_app/: Dockerfile  pyproject.toml
