[tool.poetry]
name = "sample_app"
version = "0.1.0"
description = ""
authors = ["Tyson Denio <tyson@onna.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "3.7.2"
arrow = "0.17.0"

[tool.poetry.dev-dependencies]
pytest = "5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
